[gd_scene load_steps=7 format=3 uid="uid://cg4vpw2p7ijb3"]

[ext_resource type="Script" path="res://code/EnemyShoot.gd" id="1_kqcwa"]
[ext_resource type="PackedScene" uid="uid://ogik4s70pgwl" path="res://characters/slime/slime.tscn" id="2_t2u4b"]
[ext_resource type="Script" path="res://code/Hurtbox_detection.gd" id="3_fh7gn"]
[ext_resource type="PackedScene" uid="uid://d2lxra1fevbay" path="res://scenes/gun.tscn" id="4_v35hv"]

[sub_resource type="CircleShape2D" id="CircleShape2D_hwn3i"]
radius = 48.0104

[sub_resource type="CircleShape2D" id="CircleShape2D_x6dlo"]
radius = 51.0882

[node name="EnemyGunman" type="CharacterBody2D"]
collision_layer = 2
motion_mode = 1
script = ExtResource("1_kqcwa")

[node name="Slime" parent="." instance=ExtResource("2_t2u4b")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -28)
shape = SubResource("CircleShape2D_hwn3i")

[node name="Hurtbox_detection" type="Area2D" parent="."]
script = ExtResource("3_fh7gn")

[node name="Hurtbox" type="CollisionShape2D" parent="Hurtbox_detection"]
position = Vector2(0, -27)
shape = SubResource("CircleShape2D_x6dlo")

[node name="WeaponHolder" type="Marker2D" parent="."]

[node name="Gun" parent="WeaponHolder" instance=ExtResource("4_v35hv")]
position = Vector2(93, -12)
rotation = 0.00658154

[node name="timeBetweenShots" type="Timer" parent="."]

[connection signal="body_entered" from="Hurtbox_detection" to="." method="_on_hurtbox_detection_body_entered"]
[connection signal="body_entered" from="Hurtbox_detection" to="Hurtbox_detection" method="_on_body_entered"]
